fixed horizontal alignment issues of textGridWithMedia

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -272,7 +272,7 @@
 }
 .justify-content-flex-end {
   justify-content: flex-end;
-  .textItem {
+  &.textItem {
     height: 100%;
   }
 }
